# snir

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  test.ll
.github/workflows/: build.yml
cmake/: snir_compiler_warnings.cmake
dev/: llvm-coverage.sh
src/: CMakeLists.txt
src/snir/: File.cpp  File.hpp  Function.hpp  Instruction.hpp  Instructions.hpp  OptimisationPass.hpp  Parser.cpp  Parser.hpp  PassManager.hpp  PrettyPrinter.hpp  Types.hpp  file.cpp  function.hpp  instruction.hpp  instructions.hpp  optimisation_pass.hpp  parser.cpp  parser.hpp  pass_manager.hpp  pretty_printer.hpp  print.hpp
src/snir/core/: AdjacencyList.hpp  Concepts.hpp  Containers.hpp  Exception.hpp  File.hpp  FlatSet.hpp  Graph.hpp  InplaceVector.hpp  LocalIdMap.hpp  Print.hpp  Ranges.hpp  StaticVector.hpp  Strings.hpp  ValueStore.hpp  file.cpp  file.hpp  print.hpp  static_vector.hpp  strings.hpp  unreachable.hpp  variant.hpp
src/snir/ecs/: basic_registry.hpp  handle.hpp  registry.hpp  storage.hpp  view.hpp
src/snir/graph/: AdjacencyList.hpp  DirectedGraph.hpp  Graph.hpp  SimpleGraph.hpp  UndirectedGraph.hpp
src/snir/ir/: AnalysisManager.hpp  BasicBlock.hpp  Branch.hpp  CompareKind.cpp  CompareKind.def  CompareKind.hpp  Function.hpp  FunctionDefinition.hpp  Identifier.cpp  Identifier.hpp  InstKind.cpp  InstKind.def  InstKind.hpp  Instruction.cpp  Instruction.hpp  Interpreter.cpp  Interpreter.hpp  Literal.cpp  Literal.hpp  Module.hpp  Operands.hpp  Parser.cpp  Parser.hpp  PassManager.cpp  PassManager.hpp  Printer.cpp  Printer.hpp  Registry.hpp  Result.hpp  Type.cpp  Type.def  Type.hpp  Value.hpp  ValueId.hpp  ValueKind.def  ValueKind.hpp  compare.hpp  function.hpp  instruction.hpp  instruction_binary.def  (+20 more)
src/snir/ir/inst/: binary_op.def  compare_op.def  unary_op.def
src/snir/ir/pass/: ControlFlowGraph.cpp  ControlFlowGraph.hpp  DeadStoreElimination.hpp  RemoveEmptyBlock.hpp  RemoveNop.hpp  dead_store_elimination.hpp  remove_empty_block.hpp  remove_nop.hpp
src/snir/ir/v2/: compare_kind.def  compare_kind.hpp  inst.hpp  inst_id.hpp  inst_kind.hpp  inst_registry.hpp  module.cpp  module.hpp  module_registry.cpp  module_registry.hpp  parser.cpp  parser.hpp  printer.cpp  printer.hpp  registry.cpp  registry.hpp  type.def  type.hpp  value.hpp  value_id.hpp  value_kind.def  value_kind.hpp  value_registry.hpp
src/snir/ir/v3/: BasicBlock.hpp  Branch.hpp  CompareKind.cpp  CompareKind.hpp  Function.hpp  FunctionDefinition.hpp  Identifier.cpp  Identifier.hpp  InstKind.cpp  InstKind.hpp  Interpreter.cpp  Interpreter.hpp  Literal.cpp  Literal.hpp  Module.hpp  Operands.hpp  Parser.cpp  Parser.hpp  PassManager.cpp  PassManager.hpp  Printer.cpp  Printer.hpp  Registry.hpp  Result.hpp  Type.cpp  Type.hpp  Value.hpp  ValueId.hpp  ValueKind.hpp
src/snir/ir/v3/pass/: DeadStoreElimination.hpp  RemoveEmptyBlock.hpp  RemoveNop.hpp
src/snir/lang/: Ast.cpp  Ast.hpp  Lexer.hpp  ParseContext.hpp  Parser.hpp  Token.cpp  Token.hpp
src/snir/pass/: optimisation_pass.hpp
src/snir/vm/: interpreter.cpp  interpreter.hpp  virtual_machine.cpp  virtual_machine.hpp
test/: CMakeLists.txt  ecs.cpp  graph.cpp  interpreter.cpp  main.cpp  parser.cpp  v3.cpp  v4.cpp  vector.cpp
test/files/: develop.ll  double_add.ll  double_deadstore.ll  double_div.ll  double_mul.ll  double_sub.ll  double_trunc.ll  float_add.ll  float_div.ll  float_mul.ll  float_sub.ll  float_trunc.ll  func.ll  funcs.ll  i1_icmp_eq_2.ll  i1_icmp_ne_2.ll  i64_add.ll  i64_and.ll  i64_args_1.ll  i64_args_2.ll  i64_blocks.ll  i64_blocks_2.ll  i64_branch.ll  i64_const.ll  i64_div.ll  i64_icmp.ll  i64_icmp_eq_1.ll  i64_icmp_eq_2.ll  i64_icmp_ne_1.ll  i64_icmp_ne_2.ll  i64_mod.ll  i64_mul.ll  i64_or.ll  i64_shl.ll  i64_shr.ll  i64_sub.ll  i64_xor.ll  mismatch_float_add_0.ll  mismatch_float_add_1.ll  mismatch_float_add_2.ll  (+6 more)
test/files/error/: unkown_instruction_1.ll  unkown_instruction_2.ll  unkown_type_1.ll
test/lang/: Lexer.cpp  Parser.cpp  test.tcc
test/v3/: double_add.ll  double_div.ll  double_mul.ll  double_sub.ll  double_trunc.ll  float_add.ll  float_div.ll  float_mul.ll  float_sub.ll  float_trunc.ll  i1_icmp_eq_1.ll  i1_icmp_eq_2.ll  i1_icmp_ne_1.ll  i1_icmp_ne_2.ll  i64_add.ll  i64_and.ll  i64_args_1.ll  i64_args_2.ll  i64_blocks.ll  i64_branch.ll  i64_const.ll  i64_div.ll  i64_icmp_eq_1.ll  i64_icmp_eq_2.ll  i64_icmp_ne_1.ll  i64_icmp_ne_2.ll  i64_mod.ll  i64_mul.ll  i64_or.ll  i64_shl.ll  i64_shr.ll  i64_sub.ll  i64_xor.ll  void.ll
tool/snir-lang/: CMakeLists.txt  main.cpp
tool/snir-opt/: CMakeLists.txt  Main.cpp  main.cpp
